--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <h1>First Site for Mac</h1>
 
     <p>Here is the paragraph Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat amet molestias corporis nobis modi cum beatae ipsam cumque, animi ipsa nemo laudantium laboriosam dolorem excepturi? Ab laboriosam suscipit quas libero, illo optio. Dolor, totam ipsam.</p>
+
+    <p>Here is some more contets for my website...</p>
     
 </body>
 </html>
